objects/Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType_Name__c</field>
                <operation>equals</operation>
                <value>Site</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assignments (Account Site)</relationshipLabel>
        <relationshipName>SiteAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Can only be Customer Type Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordType_Name__c</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType_Name__c</field>
                <operation>equals</operation>
                <value>Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Header</fullName>
                </value>
                <value>
                    <fullName>Primary Shiptos</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>TECHNOLOGY</fullName>
                </value>
                <value>
                    <fullName>FURNITURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DML__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DML</label>
        <referenceTo>DML__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Year__c</fullName>
        <label>Goal Year</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2020</fullName>
                    <default>true</default>
                    <label>2020</label>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reallignment</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Initial Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Person_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Person ID</label>
        <referenceTo>Sales_Person__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Person_ID__c</columns>
        <columns>Assignment_Type__c</columns>
        <columns>DML__c</columns>
        <columns>Account__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Assignment_Type__c</columns>
        <columns>Sales_Person_ID__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>DML__c</columns>
        <columns>Account__c</columns>
        <columns>Goal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>